--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,7 +18,7 @@
   <!-- <script src="{{ 'assets/js/bulma.js' | prepend: site.baseurl }}"></script> -->
   {% if page.scripts %}
   {% for script in page.scripts %}
-    <script src="{{ script }}"></script>
+    <script src="{{ script | prepend: site.baseurl }}"></script>
   {% endfor %}
   {% endif %}
 </html>
