--- a/css/main.scss
+++ b/css/main.scss
@@ -68,6 +68,9 @@ h1,h2,h3,h4,h5,h6 {
 .zine-name {
 	text-align: center;
 	margin-top: 0;
+	a {
+		text-decoration: none;
+	}
 }
 .title {
     color: #fffdf7;
@@ -79,4 +82,64 @@ h1,h2,h3,h4,h5,h6 {
 	font-family: Arapey;
 	color: #6798c0;
 
+}
+
+.page-buttons, .contact-buttons {
+	margin-top: 2em;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    column-gap: 0.8em;
+}
+
+.page-button {
+	font-family: Arapey;
+    text-transform: uppercase;
+    color: #2d3142;
+    border-color: #2d3142;
+    font-size: large;
+    text-decoration: none;
+    padding: 0.5em 1em;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 1.5em;
+
+    &:hover {
+    	color: #6798c0;
+    	border-color: #6798c0;
+    }
+}
+
+.icon{
+  height: 1.5em;
+  width: 1.5em;
+  /*filter: invert(1);*/
+  filter: invert(19%) sepia(8%) saturate(1673%) hue-rotate(191deg) brightness(92%) contrast(95%);
+  background-size: contain;
+  display: inline-block;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-decoration: none;
+
+  &:hover {
+  	filter: invert(73%) sepia(7%) saturate(3472%) hue-rotate(177deg) brightness(80%) contrast(85%);
+  }
+}
+
+.icon#twitter {
+  background-image: url({{ '/assets/images/twitter.png' | prepend: site.baseurl }});
+}
+
+.icon#tumblr {
+  background-image: url({{ '/assets/images/tumblr.png' | prepend: site.baseurl }});
+}
+
+.icon#mail {
+  background-image: url({{ '/assets/images/email.png' | prepend: site.baseurl }});
+}
+
+.icon#insta {
+  background-image: url({{ '/assets/images/insta.png' | prepend: site.baseurl }});
 }
