--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,6 +15,7 @@
       	{{ content }}
 
       	<div class="contact-buttons">
+      		<a class="icon" id="home" href="{{ '/' | prepend: site.baseurl }}">&nbsp;</a>
 		    <a class="icon" id="twitter" href="https://twitter.com/thesugawaracltv" target="_blank">&nbsp;</a>
 		    <a class="icon" id="insta" href="https://www.instagram.com/thesugawaracollective/" target="_blank">&nbsp;</a>
 		    <a class="icon" id="tumblr" href="https://www.tumblr.com/thesugawaracollective" target="_blank">&nbsp;</a>
