add tsc acknowledgement

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,6 +22,9 @@
 		    <a class="icon" id="mail" href="mailto:sugawaradigizine+ikigai@gmail.com" target="_blank">&nbsp;</a>
       	</div>
   	  </article>
+  	  <div class="tsc-acknowledgement">This project is in association with: <br/>
+	  	  <a href="https://sugawara-collective.github.io/"><img class="tsc-logo" src="https://sugawara-collective.github.io/assets/images/tsc-logo-light.png"/></a>
+	  </div>
     </main>
   </body>
   <!-- <script src="{{ 'assets/js/bulma.js' | prepend: site.baseurl }}"></script> -->
