--- a/css/main.scss
+++ b/css/main.scss
@@ -60,6 +60,7 @@ h1,h2,h3,h4,h5,h6 {
 	min-height: 100vh;
 	padding: 2em;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	width: 100%
 }
@@ -100,6 +101,7 @@ h1,h2,h3,h4,h5,h6 {
     align-items: center;
     justify-content: center;
     column-gap: 0.8em;
+    row-gap: 0.8em;
 }
 
 .page-button {
@@ -154,4 +156,19 @@ h1,h2,h3,h4,h5,h6 {
 
 .icon#home {
   background-image: url({{ '/assets/images/home.png' | prepend: site.baseurl }});
+}
+
+.tsc-acknowledgement {
+	text-align: center;
+	width: 250px;
+	margin-top: 4em;
+	color: #fffdf7;
+
+	&.home {
+		margin-top: 1em;
+	}
+
+	img {
+		width: 80%;
+	}
 }
